A few more cleanups.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16345 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/inbox.jspx
+++ b/mail-casing/servlets/quarantine/root/inbox.jspx
@@ -42,6 +42,7 @@
                
                globalStrings.quarantineGridTitle = '${uvm:i18n( pageContext, 'Quarantined Messages' )}';
                globalStrings.safelistGridTitle = '${uvm:i18n( pageContext, "Safelist" )}';
+               globalStrings.remapsGridTitle = '${uvm:i18n( pageContext, "Alias Control" )}';
                
                globalStrings.buttonRelease = [ '${uvm:i18n( pageContext, "Release Messages" )}',
                                                '${uvm:i18n( pageContext, "Release one Message" )}',
