--- a/uvm-lib/servlets/ROOT/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/ROOT/root/blockpage_template.jspx
@@ -1,5 +1,6 @@
 <html xmlns:jsp="http://java.sun.com/JSP/Page"
       xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:uvm="http://java.untangle.com/jsp/uvm"
       xmlns="http://www.w3.org/1999/xhtml">
 
   <jsp:output omit-xml-declaration="true"
@@ -22,10 +23,7 @@
   <head>
     <title><c:out value="${pageTitle}"/></title>
 
-    <style type="text/css">
-      @import "skins/second/css/ext-skin.css";
-      @import "skins/second/css/skin.css";
-    </style>
+    <uvm:skin type="user" name="${ss.userPagesSkin}"/>
     
     <script type="text/javascript">
       <![CDATA[
