--- a/util/hier/usr/share/untangle/reports/Detail.jrxml
+++ b/util/hier/usr/share/untangle/reports/Detail.jrxml
@@ -223,7 +223,7 @@
         </textElement>
         <textFieldExpression class="java.lang.String"><![CDATA[
         $P{REPORT_MAX_COUNT}.intValue() <= $V{REPORT_COUNT}.intValue() ?
-        new String("Note: This Untangle Report is limited to " + $P{REPORT_MAX_COUNT} + " incidents.") :
+        new String("Note: This report is limited to " + $P{REPORT_MAX_COUNT} + " incidents.") :
         new String("")]]></textFieldExpression>
       </textField>
 
@@ -239,7 +239,7 @@
         </textElement>
         <textFieldExpression class="java.lang.String"><![CDATA[
         $P{REPORT_MAX_COUNT}.intValue() <= $V{REPORT_COUNT}.intValue() ?
-        new String("Note: This Untangle Report is limited to " + $P{REPORT_MAX_COUNT} + " incidents.") :
+        new String("Note: This report is limited to " + $P{REPORT_MAX_COUNT} + " incidents.") :
         new String("")]]></textFieldExpression>
       </textField>
 
