--- a/mail-casing/servlets/quarantine/root/template.jspx
+++ b/mail-casing/servlets/quarantine/root/template.jspx
@@ -43,7 +43,7 @@
       </div>
 
       <div id="footer">
-        <p><span><uvm:i18n>Powered by Untangle&amp;trade;</uvm:i18n></span></p>
+        <!-- jspx -->
       </div>
 
     </div>
