--- a/mail-casing/servlets/quarantine/root/inbox.jspx
+++ b/mail-casing/servlets/quarantine/root/inbox.jspx
@@ -23,30 +23,28 @@
   <c:set var="javascript" scope="request">
     <uvm:inlineScript>
       <![CDATA[
-               var inboxDetails = {};
-               inboxDetails.token = '${currentAuthToken}';
-               inboxDetails.totalCount = ${q:totalMessageCount(pageContext)};
-               inboxDetails.address = '${currentAddress}';
+               var inboxDetails = {
+                   token : '${currentAuthToken}',
+                   totalCount: ${q:totalMessageCount(pageContext)},
+                   address : '${currentAddress}',
 
-               /* This is the number of days a message will be saved in the quarantine for */
-               var quarantineDays = ${q:maxDaysToIntern( pageContext )};
+                   /* This is the address the message is remapped to */
+                   forwardAddress : '${q:remappedTo(pageContext, false )}',
+                   
+                   /* This is the number of days a message will be saved in the quarantine for */
+                   quarantineDays : ${q:maxDaysToIntern( pageContext )},
 
-               var safelistData = ${q:jsonSafelist(pageContext)};
+                   safelistData : ${q:jsonSafelist(pageContext)},
                
-               var remapsData = ${q:jsonReceivingRemaps(pageContext)};
-               
-               var globalStrings = {};
-               globalStrings.headerEmailAddress = '${uvm:i18n( pageContext, "Email Address" )}';
-               
-               globalStrings.quarantineGridTitle = '${uvm:i18n( pageContext, 'Quarantined Messages' )}';
-               globalStrings.safelistGridTitle = '${uvm:i18n( pageContext, "Safelist" )}';
-               globalStrings.remapsGridTitle = '${uvm:i18n( pageContext, "Alias Control" )}';               
+                   remapsData : ${q:jsonReceivingRemaps(pageContext)}
+               }
       ]]>
     </uvm:inlineScript>
 
     <!-- Libraries for the quarantine application -->
     <uvm:script src="quarantine.js"/>
     <uvm:script src="safelist.js"/>
+    <uvm:script src="remaps.js"/>
     <uvm:script src="/webui/script/i18n.js"/>
 
     <!-- 
