fixing a few pieces.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16756 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/request.jspx
+++ b/mail-casing/servlets/quarantine/root/request.jspx
@@ -8,6 +8,12 @@
 
   <uvm:i18nload path="mail-casing"/>
 
+  <jsp:scriptlet>
+    <![CDATA[
+             request.setAttribute( "bs", com.untangle.uvm.LocalUvmContextFactory.context().brandingManager().getBaseSettings());
+    ]]>
+  </jsp:scriptlet>
+
   <c:set var="title" scope="request">
     <uvm:i18n>
       Request Quarantine Digest Email 
