Updating the skin tag.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16793 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/template.jspx
+++ b/mail-casing/servlets/quarantine/root/template.jspx
@@ -18,10 +18,10 @@
       @import "/webui/ext/resources/css/ext-all.css";
     </style>
 
-    <uvm:skin type="user" name="${ss.userPagesSkin}"/>
+    <uvm:skin src="ext-skin.css"  name="${ss.userPagesSkin}"/>
+    <uvm:skin src="userPages.css" name="${ss.userPagesSkin}"/>
 
     <!-- extjs, json and i18n libraries, this should be consolidated into a helper tag. -->
-    
     <uvm:script src="/webui/ext/source/core/Ext.js"/>
     <uvm:script src="/webui/ext/source/adapter/ext-base.js"/>
     <uvm:script src="/webui/ext/ext-all-debug.js"/>
