--- a/mail-casing/servlets/quarantine/root/template.jspx
+++ b/mail-casing/servlets/quarantine/root/template.jspx
@@ -34,8 +34,10 @@
   <body>
     <div id="content">
       <div id="header">
-        <a href="${bs.companyUrl}"><img src="/images/BrandingLogo.gif" alt=""/></a>
-        <h1><span><c:out value="${title}" escapeXml="false"/></span></h1>
+      <table border="0" cellpadding="0" cellspacing="0" width="1000">
+        <tr><td><a href="${bs.companyUrl}"><img src="/images/BrandingLogo.gif" alt=""/></a></td>
+        <td class="title"><c:out value="${title}" escapeXml="false"/></td></tr>
+      </table>
       </div>
 
       <div id="main">
