--- a/uvm-lib/servlets/webui/root/skins/default/css/skin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/skin.css
@@ -393,6 +393,7 @@ thead tr.x-grid3-hd-row {
 }
 
 div.appItem {
+    cursor: pointer;
 	position: relative;
 	background: transparent url(../images/main/background_app_item.png) no-repeat !important;
 	width: 177px;
@@ -415,20 +416,19 @@ div.appItem div.text {
 	font-size: 12px;
 	font-weight: bold;
 }
-div.appItem div.buttonPosA {
-	position: absolute;
-	right: 5px;
+div.appItem div.action {
+    position: absolute;
+    right: 5px;
 
-	top: 34px;
-	cursor: pointer;
-	height: 15px;
-	font-family: verdana, sans-serif;
-	font-size: 9px;
-	font-weight: bold;
-	color: green;
-	padding-right: 16px;
+    top: 34px;
+    height: 15px;
+    font-family: verdana, sans-serif;
+    font-size: 9px;
+    font-weight: bold;
+    color: green;
+    padding-right: 16px;
 }
-div.appItem div.buttonPosB {
+div.appItem div.buttonBuy {
 	position: absolute;
 	left: 53px;
 	top: 34px;
